# FairWorkly

./: FairWorkly.code-workspace
agent-service/: pyproject.toml
backend/src/FairWorkly.API/: FairWorkly.API.csproj  Program.cs
backend/src/FairWorkly.Infrastructure/Persistence/: DesignTimeDbContextFactory.cs
backend/tests/FairWorkly.IntegrationTests/Integration/: MakeEmployeeEmailOptionalMigrationTests.cs  RosterValidationIntegrationTests.cs
backend/tests/FairWorkly.UnitTests/: FairWorkly.UnitTests.csproj
frontend/: package-lock.json  package.json
