[tool.poetry]
name = "agent-service"
version = "0.1.0"
description = "FairWorkly master agent service built with FastAPI"
authors = ["FairWorkly Developers <dev@fairworkly.com>"]

[[tool.poetry.packages]]
include = "master_agent"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.8.0"}
requests = "^2.32.0"
pyyaml = "^6.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.3.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.0"
faiss-cpu = "^1.8.0.post1"
openpyxl = "^3.1.0"

[tool.poetry.group.ingest]
optional = true

[tool.poetry.group.ingest.dependencies]
langchain-text-splitters = "^0.3.0"
pypdf = ">=5.1,<7.0"

[tool.poetry.group.local-models]
optional = true

[tool.poetry.group.local-models.dependencies]
langchain-huggingface = "^0.1.0"
transformers = "^4.46.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
